Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjTextObjField.quorum
class Main
    Text v
    action Main
        v:SetValue("text")
        Test(v)
    end

    action Test(Number var)
    end
end
